# rabbit_pub_cons

./: .gitignore  docker-compose.yml  pyproject.toml
src/: Dockerfile.cons  Dockerfile.pub  config.py  connection.py  requirements.txt  utils.py
src/consume/: consumer.py
src/publish/: publiser.py  publisher.py
